# cleanwin

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile.test  LICENSE  Makefile  README.CN.md  README.md  aiflow.yaml  cleanwin.py  install.ps1  pyproject.toml
cleanwincli/: __init__.py  ai_host_policy.py  ai_policy_simulate.py  ai_readiness.py  ai_runbook.py  ai_schema.py  ai_schema_registry.py  ai_schema_samples.py  ai_self_test.py  ai_tools.py  ai_versioning.py  browser_inventory.py  cache_readiness.py  cli.py  collectors.py  commands.py  contract_exposure.py  core.py  debloat_privacy.py  delete_ops.py  doctor.py  environment_index.py  evidence_bundle.py  execution_contracts.py  external_rules.py  file_reports.py  identity.py  installed_apps.py  mcp_server.py  models.py  official_commands.py  operation_log.py  operation_log_readiness.py  output.py  paths.py  plan_executor.py  plan_io.py  plan_review.py  plan_validation.py  presets.py  (+17 more)
scripts/: collect-cleanwin-artifacts.ps1
tests/: __init__.py  conftest.py  test_ai_contracts.py  test_ai_readiness.py  test_ai_schema_registry.py  test_browser_inventory.py  test_cli.py  test_contract_exposure.py  test_debloat_privacy.py  test_delete_ops.py  test_evidence_bundle.py  test_execution_contracts.py  test_external_rules.py  test_file_reports.py  test_identity.py  test_installed_apps.py  test_mcp_server.py  test_official_commands.py  test_operation_log_readiness.py  test_plan_executor.py  test_plan_validation.py  test_presets.py  test_promotion_gates.py  test_pytest_governance.py  test_recovery.py  test_rule_catalog.py  test_safety.py  test_scan_governance.py  test_startup_inventory.py  test_system_health.py  test_windows_artifact_validation.py  test_windows_integration.py  (+3 more)
(+16 files in other folders)
