[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanwin"
version = "0.1.0"
description = "A conservative Windows cleanup CLI with dry-run, plans, and fail-closed deletion."
requires-python = ">=3.10"
dependencies = []
license = "MIT"
keywords = ["windows", "cleanup", "cli", "dry-run", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
cleanwin = "cleanwin:main"
cleanwin-mcp = "cleanwincli.mcp_server:main"

[tool.setuptools]
py-modules = ["cleanwin"]

[tool.setuptools.packages.find]
include = ["cleanwincli*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["cleanwin.py", "cleanwincli", "tests"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"
